[tool.poetry]
name = "copernicus-tides-to-grib"
version = "0.1.0"
description = "Project to convert Copernicus 10-day tidal current forecasts around Europe into GRIB format"
authors = ["jamesWith <james@redholme.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
xarray = "^2025.7.0"
copernicusmarine = "^2.1.3"
eccodes = "^2.42.0"

[tool.poetry.scripts]
tideconvert = "copernicus_tides_to_grib:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
